# archiveinator

./: .gitignore  CLAUDE.md  README.md  RESUME.md  convert_cookies.py  paywall-tdd.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  qa-paywall.yml  release.yml  update-blocklists.yml
archiveinator/: __main__.py  blocklist.py  bypass_cache.py  cli.py  config.py  console.py  naming.py  pipeline.py  platform_info.py  setup_cmd.py  ua_manager.py
archiveinator/steps/: ad_blocking.py  archive_fallback.py  asset_inlining.py  content_extraction.py  dom_cleanup.py  google_news.py  image_dedup.py  js_overlay.py  page_load.py  paywall.py  stealth_browser.py
tests/: conftest.py
tests/integration/: test_ad_blocking.py  test_dom_cleanup.py  test_page_load.py  test_pipeline_e2e.py
tests/qa/: check_feeds.py  conftest.py  reporter.py  rss_resolver.py  sites.yaml  test_mock_paywall.py  test_real_urls.py
tests/unit/: test_archive_fallback.py  test_asset_inlining.py  test_blocklist.py  test_bypass_cache.py  test_cli.py  test_config.py  test_console.py  test_content_extraction.py  test_google_news.py  test_image_dedup.py  test_js_overlay.py  test_naming.py  test_paywall.py  test_platform_info.py  test_setup_cmd.py  test_stealth_browser.py  test_ua_manager.py
